--- a/mystyle.css
+++ b/mystyle.css
@@ -1,9 +1,27 @@
 body {
-  background-color: lightblue;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1 {
   color: navy;
-  margin-left: 20px;
   text-align: center;
+  background-color: lightblue;
+}
+
+.pic{
+  width: 320px;
+  height: auto;
+  border-radius: 20px; 
+  margin: 15px;
+  float: inline-start;
+}
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: white;
+  background-color: #007BFF; /* Bootstrap primary color */
+  text-align: center;
+  text-decoration: none; /* Remove underline */
+  border-radius: 5px; /* Rounded corners */
 }
